[gd_scene load_steps=5 format=2]

[ext_resource path="res://Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://HexagonMatrix.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Level.gd" type="Script" id=4]

[node name="Level" type="Node"]
script = ExtResource( 4 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="HexagonMatrix" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
