[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/HexagonMatrix.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Level.gd" type="Script" id=4]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/menu/Menu.tscn" type="PackedScene" id=6]

[node name="Level" type="Node"]
script = ExtResource( 4 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="HexagonMatrix" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="UpdateTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="ScoreTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Menu" parent="." instance=ExtResource( 6 )]

[connection signal="timeout" from="UpdateTimer" to="." method="_on_UpdateTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="change_resolution" from="Menu" to="." method="_on_Menu_change_resolution"]
[connection signal="change_volume" from="Menu" to="." method="_on_Menu_change_volume"]
[connection signal="skip_intro" from="Menu" to="." method="_on_Menu_skip_intro"]
[connection signal="start_game" from="Menu" to="." method="start_game"]
